--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Jeremiah Siranjofu Wachiye <siranjofuw@gmail.com>" />
+    <meta name="description" content="Academic Project Approval and Management System is a web-based software application. The main purpose of this system is to automate all the project-management operations in academics and create an effective and efficient platform for students and their project supervisors and evaluators." />
     <meta
       name="description"
       content="Academic Project Approval and Management System"
